[gd_scene load_steps=5 format=3 uid="uid://bf2jr8k2gkarq"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_fo4gy"]
[ext_resource type="AudioStream" uid="uid://bh1dx01ool5kr" path="res://sfx/play_sound.mp3" id="2_u1k23"]
[ext_resource type="AudioStream" uid="uid://dgmfaslyqkoy8" path="res://sfx/select_sound.mp3" id="3_32cf0"]

[sub_resource type="LabelSettings" id="LabelSettings_3xm4q"]
font_size = 42

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fo4gy")

[node name="MarginContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1915.0
offset_bottom = 1069.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BETTER PADEL"
label_settings = SubResource("LabelSettings_3xm4q")
horizontal_alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="PlaySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_u1k23")
bus = &"SFX"

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_32cf0")
bus = &"SFX"
